Finished site2, uplaoded to jacobmott.io

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,35 @@
   <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="fullpage.css" />
+  <!-- This following line is optional. Only necessary if you use the option css3:false and you want to use other easing effects rather than "easeInOutCubic". -->
+  <script src="vendors/easings.min.js"></script>
+  <script type="text/javascript" src="fullpage.js"></script>
 </head>
-<body class="mat-typography">
-  <app-root></app-root>
+<body>
+  <app-root>
+
+
+    <div class="container">
+      <div class="row">
+        <div id="loader">
+            <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="loading"></div>
+        </div>
+      </div>
+    </div>
+
+
+
+  </app-root>
 </body>
 </html>
